# Mini_Autonomy_System

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  MODERN_CPP23.md  README.md  build.bat  build.sh  build_and_test.sh  config.txt  demo_simple.py  docker-compose.yml  generate_docs.bat  package.xml  run_demo.sh  run_simple_demo.sh  test_modules.cpp  test_simple.cpp  validate_modern_cpp.sh
apps/: benchmark.cpp
build_cpp23/: build.ninja
build_modules/: build.ninja
build_simple/: build.ninja
build_test/: build.ninja
demo/data/: coco.names  info.txt
demo/data/dataset_ros2/: metadata.yaml
docker/: CALIBRATION_DATASETS_README.md  Dockerfile  README.md  calibration_accuracy_tests.py  docker-compose.yml  rosbag_processor.py  run_calibration_tests.sh  run_demo.sh  run_vio_tests.sh  test_calibration_suite.py  validate_calibration_datasets.py
docker/test_results/: calibration_test_report.json
docs/: architecture_clean.html  architecture_clickable.html  architecture_debug.html  architecture_dynamic.html  architecture_dynamic_fixed.html  architecture_final.html  architecture_fixed_final.html  architecture_modular.html  architecture_perfect.html  architecture_refactored.html  architecture_simple.html  architecture_test.html  architecture_visualization.html  architecture_visualization_simple.html  architecture_visualization_working.html  architecture_working.html  basic_working.html  diagrams.js  glance_architecture_visualization.html  index.html  local_architecture.html  mermaid-height-util.js  minimal_test.html  script.js  simple_architecture.html  simple_working_tabs.html  stable_architecture.html  styles.css  test_mermaid.html
docs/diagrams/: async.mmd  classes.mmd  dataflow.mmd  modules.mmd  performance.mmd  pipeline.mmd  threads.mmd
include/core/: benchmark.hpp  config.hpp  logger.hpp  metrics.hpp  pipeline.hpp  thread_safe_queue.hpp  thread_safe_queue.ixx
include/io/: gstreamer_capture.hpp  imu_simulator.hpp
include/perception/: async.hpp  async.ixx  calibration.ixx  concepts.hpp  concepts.ixx  constants.h  detector.hpp  detector.ixx  geom.ixx  image_loader.hpp  image_loader.ixx  metrics.hpp  metrics.ixx  pipeline.hpp  pipeline.ixx  queue.hpp  queue.ixx  ranges.hpp  result.hpp  result.ixx  ros_provider.hpp  ros_provider.ixx  stereo_matching.ixx  tracking.ixx  types.hpp  types.ixx  viz.ixx
include/vision/: detector.hpp  fusion.hpp  tracker.hpp
mav0_modules_demo/: CMakeLists.txt
modules/: README.md  perception.async.cppm  perception.calibration.cpp  perception.concepts.cppm  perception.detector.cpp  perception.detector.cppm  perception.detector.simple.cppm  perception.image_loader.cpp  perception.image_loader.cppm  perception.image_loader.simple.cppm  perception.metrics.cppm  perception.pipeline.cpp  perception.pipeline.cppm  perception.queue.cppm  perception.result.cppm  perception.ros_provider.cpp  perception.stereo_matching.cpp  perception.tracking.cpp  perception.types.cpp  perception.types.cppm  perception.viz.cpp  test_detector.cpp
scripts/: create_viz_video.sh  record_viz_demo.sh
src/: main.cpp  main_minimal.cpp  main_modern.cpp  modules_dummy.cpp  rosbag_demo.cpp  rosbag_viz_demo.cpp  rosbag_viz_demo_headless.cpp
src/core/: config.cpp  logger.cpp  metrics.cpp  pipeline.cpp  thread_safe_queue.cpp
src/io/: dummy.cpp  gstreamer_capture.cpp  imu_simulator.cpp
src/vision/: detector.cpp  dummy.cpp  fusion.cpp  tracker.cpp
tests/: CMakeLists.txt  test_core.cpp  test_detector.cpp  test_image_loader.cpp  test_ros_provider.cpp  test_vision.cpp
